fix: ToC alignment
Spec: https://www.w3.org/TR/css-flexbox-1/#align-items-property

--- a/src/frontend/assets/style/sidebar.css
+++ b/src/frontend/assets/style/sidebar.css
@@ -26,7 +26,7 @@
   }
 
   & > div {
-    align-items: left;
+    align-items: flex-start;
     display: flex;
     justify-content: space-around;
     width: 150px;
